src/objects/pse__Proj__c.object
<CustomObject>
    <fields>
        <fullName>pse__Project_Status__c</fullName>
        <description>Select the current project status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
        <inlineHelpText>Select the current project status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#3366FF</color>
                    <label>Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project_Type__c</fullName>
        <description>A descriptive classification of the project</description>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Project</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Discount_Limit__c</fullName>
        <description>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</description>
        <inlineHelpText>The rate card&apos;s minimum suggested bill rate to which the discount will be applied.</inlineHelpText>
        <label>Rate Card Discount Limit</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Percentage_Discount__c</fullName>
        <description>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request or assignment on a project.</description>
        <inlineHelpText>The discount in percent applicable on a rate card&apos;s suggested bill rate when creating or updating a resource request or assignment on a project.</inlineHelpText>
        <label>Rate Card Percentage Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</description>
        <inlineHelpText>A rate card set, composed of multiple separate rate cards, determines which rate cards are applied to a project</inlineHelpText>
        <label>Rate Card Set</label>
        <referenceTo>pse__Rate_Card_Set__c</referenceTo>
        <relationshipLabel>Rate Card Set Projects</relationshipLabel>
        <relationshipName>Rate_Card_Set_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Recognition_Method__c</fullName>
        <description>The recognition method to apply to this record for revenue forecasting.</description>
        <inlineHelpText>The recognition method to apply to this record for revenue forecasting.</inlineHelpText>
        <label>Recognition Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>pse__Recognition_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Remaining_Amount__c</fullName>
        <description>The bookings amount minus ready-to-bill records and any pre-billed amount.</description>
        <formula>IF( OR( pse__Bookings__c = 0.00, pse__Apply_Billing_Cap__c = false) , NULL , pse__Bookings__c - (pse__Billings__c + pse__Pre_Billed__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The bookings amount minus ready-to-bill records and any pre-billed amount.</inlineHelpText>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Requires_Dependency_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Dependency Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast_Batch_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when this project is queued ready for revenue forecast processing. This is a system controlled field.</description>
        <inlineHelpText>Indicates when this project is queued ready for revenue forecast processing. This is a system controlled field.</inlineHelpText>
        <label>Revenue Forecast Batch Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast_Last_Updated__c</fullName>
        <description>Date and time when this revenue forecast was last updated.</description>
        <inlineHelpText>Date and time when this revenue forecast was last updated.</inlineHelpText>
        <label>Revenue Forecast Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast_Processing_Status__c</fullName>
        <description>The processing status of this revenue forecast.</description>
        <inlineHelpText>The processing status of this revenue forecast.</inlineHelpText>
        <label>Revenue Forecast Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Revenue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_Status__c</fullName>
        <description>Select the current schedule status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
        <inlineHelpText>Select the current schedule status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
        <label>Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Schedule_Visual__c</fullName>
        <description>Shows whether the project is on schedule, based on the color selected from the corresponding Schedule Status picklist.</description>
        <formula>IF(ISPICKVAL(pse__Schedule_Status__c,&quot;Yellow&quot;),IMAGE(&quot;/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),IF(ISPICKVAL(pse__Schedule_Status__c,&quot;Red&quot;),IMAGE(&quot;/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),IF(ISPICKVAL(pse__Schedule_Status__c,&quot;Green&quot;),IMAGE(&quot;/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows whether the project is on schedule, based on the color selected from the corresponding Schedule Status picklist.</inlineHelpText>
        <label>Schedule Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Backlog_Calculated_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Scheduled Backlog Calculated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Backlog_End_Date__c</fullName>
        <label>Scheduled Backlog End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Hours_Remaining__c</fullName>
        <description>The number of hours not yet spent on a project. Calculated using assignments whose end date comes after the Hours Cut Off Date and takes into account scheduled hours and schedule exceptions.</description>
        <inlineHelpText>The number of hours not yet spent on a project. Calculated using assignments whose end date comes after the Hours Cut Off Date and takes into account scheduled hours and schedule exceptions.</inlineHelpText>
        <label>Scheduled Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Milestone__c</fullName>
        <label>Scheduled Milestone</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Time__c</fullName>
        <label>Scheduled Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Scope_Status__c</fullName>
        <description>Select the current scope status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</description>
        <inlineHelpText>Select the current scope status from the picklist. Alternatively, use Process Builder or workflow rules to use your own logic to control the behavior of the corresponding color indicator field.</inlineHelpText>
        <label>Scope Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Scope_Visual__c</fullName>
        <description>Shows whether the project is in scope, based on the color selected from the corresponding Scope Status picklist.</description>
        <formula>IF(ISPICKVAL(pse__Scope_Status__c,&quot;Yellow&quot;),IMAGE(&quot;/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),IF(ISPICKVAL(pse__Scope_Status__c,&quot;Red&quot;),IMAGE(&quot;/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),IF(ISPICKVAL(pse__Scope_Status__c,&quot;Green&quot;),IMAGE(&quot;/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows whether the project is in scope, based on the color selected from the corresponding Scope Status picklist.</inlineHelpText>
        <label>Scope Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Send_to_Third_Party_Expenses_Application__c</fullName>
        <description>Controls whether or not the project is sent to a third-party expenses application.</description>
        <formula>AND(pse__Is_Active__c, NOT(pse__Closed_for_Expense_Entry__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controls whether or not the project is sent to a third-party expenses application.</inlineHelpText>
        <label>Send to Third-Party Expenses Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Services_Billing_Time_Period_Type__c</fullName>
        <label>Services Billing Time Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Share_with_Project_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, sharing rules are created for this record and its children so that the user designated as Project Manager has access to them.</description>
        <label>Share with Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Share_with_Project_Resources__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to share certain project related objects like Milestones with resources that are assigned to the project</inlineHelpText>
        <label>Share with Project Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Paperwork</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status_Visual__c</fullName>
        <description>Shows the status of the project based on the color selected from the corresponding Project Status picklist.</description>
        <formula>IF(ISPICKVAL(pse__Project_Status__c,&quot;Yellow&quot;),IMAGE(&quot;/resource/pse__StatusImages/yellow.png&quot;,&quot;2-Yellow&quot;),IF(ISPICKVAL(pse__Project_Status__c,&quot;Red&quot;),IMAGE(&quot;/resource/pse__StatusImages/red.png&quot;,&quot;3-Red&quot;),IF(ISPICKVAL(pse__Project_Status__c,&quot;Green&quot;),IMAGE(&quot;/resource/pse__StatusImages/green.png&quot;,&quot;1-Green&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the status of the project based on the color selected from the corresponding Project Status picklist.</inlineHelpText>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Sync_With_Jira__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the project is synchronized with Jira.</description>
        <inlineHelpText>Controls whether the project is synchronized with Jira.</inlineHelpText>
        <label>Sync with Jira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Tasks_Total_Percent_Complete_Points__c</fullName>
        <formula>IF (pse__Tasks_Total_Points__c=0, 0, pse__Tasks_Total_Points_Complete__c/pse__Tasks_Total_Points__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tasks Total Percent Complete (Points)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Tasks_Total_Points_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total of task points complete. This field is system generated.</inlineHelpText>
        <label>Tasks Total Points Complete</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tasks_Total_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total of all points for project tasks</inlineHelpText>
        <label>Tasks Total Points</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Time_Credited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable projects for which consulting time is credited towards utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable projects for which consulting time is credited towards utilization.</inlineHelpText>
        <label>Time Credited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Excluded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked for non-billable projects for which time should neither count for or against utilization.</description>
        <inlineHelpText>This checkbox should be checked for non-billable projects for which time should neither count for or against utilization.</inlineHelpText>
        <label>Time Excluded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Time_Zone__c</fullName>
        <description>The project&apos;s time zone. All project task start and end times use this time zone.</description>
        <inlineHelpText>The project&apos;s time zone. All project task start and end times use this time zone.</inlineHelpText>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa/Algiers</fullName>
                </value>
                <value>
                    <fullName>Africa/Cairo</fullName>
                </value>
                <value>
                    <fullName>Africa/Casablanca</fullName>
                </value>
                <value>
                    <fullName>Africa/Johannesburg</fullName>
                </value>
                <value>
                    <fullName>Africa/Nairobi</fullName>
                </value>
                <value>
                    <fullName>America/Adak</fullName>
                </value>
                <value>
                    <fullName>America/Anchorage</fullName>
                </value>
                <value>
                    <fullName>America/Argentina/Buenos_Aires</fullName>
                    <label>America/Argentina/Buenos Aires</label>
                </value>
                <value>
                    <fullName>America/Bogota</fullName>
                </value>
                <value>
                    <fullName>America/Caracas</fullName>
                </value>
                <value>
                    <fullName>America/Chicago</fullName>
                </value>
                <value>
                    <fullName>America/Denver</fullName>
                </value>
                <value>
                    <fullName>America/El_Salvador</fullName>
                    <label>America/El Salvador</label>
                </value>
                <value>
                    <fullName>America/Halifax</fullName>
                </value>
                <value>
                    <fullName>America/Indiana/Indianapolis</fullName>
                </value>
                <value>
                    <fullName>America/Lima</fullName>
                </value>
                <value>
                    <fullName>America/Los_Angeles</fullName>
                    <label>America/Los Angeles</label>
                </value>
                <value>
                    <fullName>America/Mazatlan</fullName>
                </value>
                <value>
                    <fullName>America/Mexico_City</fullName>
                    <label>America/Mexico City</label>
                </value>
                <value>
                    <fullName>America/New_York</fullName>
                    <label>America/New York</label>
                </value>
                <value>
                    <fullName>America/Panama</fullName>
                </value>
                <value>
                    <fullName>America/Phoenix</fullName>
                </value>
                <value>
                    <fullName>America/Puerto_Rico</fullName>
                    <label>America/Puerto Rico</label>
                </value>
                <value>
                    <fullName>America/Santiago</fullName>
                </value>
                <value>
                    <fullName>America/Sao_Paulo</fullName>
                    <label>America/Sao Paulo</label>
                </value>
                <value>
                    <fullName>America/Scoresbysund</fullName>
                </value>
                <value>
                    <fullName>America/St_Johns</fullName>
                    <label>America/St Johns</label>
                </value>
                <value>
                    <fullName>America/Tijuana</fullName>
                </value>
                <value>
                    <fullName>Asia/Baghdad</fullName>
                </value>
                <value>
                    <fullName>Asia/Baku</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Total_Assigned_Hours__c</fullName>
        <label>Total Assigned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Costs__c</fullName>
        <formula>pse__Internal_Costs__c + pse__External_Costs__c + pse__Expense_Costs__c + pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total number of project tasks. This value is system generated.</inlineHelpText>
        <label>Total Number of Tasks</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Projected_Revenue_From_Assignments__c</fullName>
        <label>Total Projected Revenue From Assignments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Submitted_Hours__c</fullName>
        <description>The number of hours spent on a project. Calculated using the total hours on submitted or approved timecards, when the Assignment lookup is not blank and the end date is before or the same as the date in the Hours Cut Off Date field.</description>
        <inlineHelpText>The number of hours spent on a project. Calculated using the total hours on submitted or approved timecards, when the Assignment lookup is not blank and the end date is before or the same as the date in the Hours Cut Off Date field.</inlineHelpText>
        <label>Total Submitted Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Backlog__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unscheduled Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Variance_From_Plan__c</fullName>
        <description>The difference between the number of planned project hours and the number of submitted or approved timecard hours. Calculated using Planned Hours on a project minus Total Submitted Hours.</description>
        <inlineHelpText>The difference between the number of planned project hours and the number of submitted or approved timecard hours. Calculated using Planned Hours on a project minus Total Submitted Hours.</inlineHelpText>
        <label>Variance from Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Variance_at_Completion__c</fullName>
        <description>The difference between the original number of planned project hours and the Estimated Hours at Completion. Calculated using Planned Hours on a project minus Estimated Hours at Completion.</description>
        <inlineHelpText>The difference between the original number of planned project hours and the Estimated Hours at Completion. Calculated using Planned Hours on a project minus Estimated Hours at Completion.</inlineHelpText>
        <label>Variance at Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Calendar</label>
        <referenceTo>pse__Work_Calendar__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Project_Work_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Assigned_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>pse__Planned_Hours__c</columns>
        <columns>Hours_Delivered__c</columns>
        <columns>Hours_Remaining__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>pse__Region__c</field>
            <operation>notEqual</operation>
            <value>Americas,Global</value>
        </filters>
        <label>EMEA Project &quot;Owner&quot;</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Projects_Test_Community_Customer</fullName>
        <columns>NAME</columns>
        <columns>pse__Planned_Hours__c</columns>
        <columns>Hours_Delivered__c</columns>
        <columns>Hours_Remaining__c</columns>
        <columns>pse__Status_Visual__c</columns>
        <columns>Expiry_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Services List</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PS_AMERICAS_Project_Portfolio</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Region__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <filters>
            <field>pse__Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>pse__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>pse__Project_Type__c</field>
            <operation>equals</operation>
            <value>Customer Project</value>
        </filters>
        <label>PS AMERICAS Project Portfolio</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PS_EMEA_Project_Portfolio1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Region__c</field>
            <operation>notEqual</operation>
            <value>Americas,APAC</value>
        </filters>
        <filters>
            <field>pse__Practice__c</field>
            <operation>notContain</operation>
            <value>Boot Camp,Innovation Labs</value>
        </filters>
        <filters>
            <field>pse__Stage__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>pse__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>pse__Project_Type__c</field>
            <operation>equals</operation>
            <value>Customer Project</value>
        </filters>
        <label>PS EMEA Project Portfolio</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Project_Owner_Technical_Lead</fullName>
        <columns>pse__Account__c</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Your Assigned Accounts_Technical Lead</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Your_Assigned_Accounts</fullName>
        <columns>NAME</columns>
        <columns>pse__Planned_Hours__c</columns>
        <columns>Hours_Delivered__c</columns>
        <columns>Hours_Remaining__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Assigned Accounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>psaws__High_Actual_Hours</fullName>
        <columns>NAME</columns>
        <columns>pse__Planned_Hours__c</columns>
        <columns>pse__Billable_Internal_Hours__c</columns>
        <columns>pse__Billable_External_Hours__c</columns>
        <columns>pse__Non_Billable_Internal_Hours__c</columns>
        <columns>pse__Non_Billable_External_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>psaws__High_Actual_Hours__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>psaws__Project_Manager_Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>pse__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Projects Close to Planned Hours</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>psaws__My_Projects</fullName>
        <columns>NAME</columns>
        <columns>pse__Account__c</columns>
        <columns>pse__Status_Visual__c</columns>
        <columns>pse__Schedule_Visual__c</columns>
        <columns>pse__Financial_Visual__c</columns>
        <columns>pse__Bookings__c</columns>
        <columns>pse__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>psaws__Project_Manager_Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>psaws__My_Projects_Close_to_Budget</fullName>
        <columns>NAME</columns>
        <columns>pse__Billings__c</columns>
        <columns>pse__Bookings__c</columns>
        <columns>pse__Expense_Budget__c</columns>
        <columns>pse__Pass_Through_Billings__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>psaws__Close_to_Budget__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>pse__Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>psaws__Project_Manager_Is_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Projects Close to Budget</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>